gccida/g2/output_call_frame_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_call_frame_info/src/dwarf2out.c:2469:36: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v13->dw_fde_begin); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_call_frame_info/src/dwarf2out.c:2499:36: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), l1); 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_call_frame_info/src/obj/dwarf2out.o] Error 1
